update booking status
